--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,20 @@ on:
 
 jobs:
   build:
-    uses: icbat/wow-addon-github-workflow/.github/workflows/release-wowi.yml@main
-    with:
-      addon_name: OpenThosePouches
-      addon_bundled_files: OpenThosePouches.lua libs/ LICENSE README.md
-      wowi_id: 26222
-    secrets:
-      wowi_api_token: ${{secrets.WOWI_API_TOKEN}}
+    runs-on: ubuntu-latest
+
+    env:
+      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+
+    steps:
+
+      # we first have to clone the AddOn project, this is a required step
+      - name: Clone project
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # gets git history for changelogs
+
+      # once cloned, we just run the GitHub Action for the packager project
+      - name: Package and release
+        uses: BigWigsMods/packager@v2
