reverts back to my action, clones processables on release
BigWigs packager was not working, and from reading issues, was going to force me to use tags and such

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,20 +10,25 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    env:
-      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
-
-      # we first have to clone the AddOn project, this is a required step
-      - name: Clone project
-        uses: actions/checkout@v3
+      - name: Clone Processables Lib
+        uses: GuillaumeFalourd/clone-github-repo-action@v2
         with:
-          fetch-depth: 0  # gets git history for changelogs
+          owner: 'p3lim-wow'
+          repository: 'LibProcessable'
 
-      # once cloned, we just run the GitHub Action for the packager project
-      - name: Package and release
-        uses: BigWigsMods/packager@v2
+      - name: Copy Processables into Lib
+        run: |
+          ls -lsa
+          cp -r LibProcessable libs/
+          ls -lsa
+          ls libs -lsa
+
+      - name: Upload to WoW Interface
+        uses: icbat/wow-addon-github-workflow/.github/workflows/release-wowi.yml@main
+        with:
+          addon_name: OpenThosePouches
+          addon_bundled_files: OpenThosePouches.lua libs/ LICENSE README.md
+          wowi_id: 26222
+        secrets:
+          wowi_api_token: ${{secrets.WOWI_API_TOKEN}}
