--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,62 +1,22 @@
-name: Release new version of addon to WoW Interface
+name: Release new version of addon
 
 on:
-  workflow_dispatch:
-    # Enables a button to manually run this against the main branch
   push:
-    # Enables automatic deploys off pushes/merges into the main branch
-    branches: [ main ]
+    tags:
+      - v*
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout the code
-      uses: actions/checkout@v2
+      - name: Checkout the code
+        uses: actions/checkout@v2
 
-    - name: Create 'dist' folder
-      run: mkdir OpenThosePouches/
+      - name: Package and Upload to all the places 
+        uses: BigWigsMods/packager@v2
+        env:
+          WAGO_API_TOKEN: ${{secrets.WAGO_API_TOKEN}}
+          WOWI_API_TOKEN: ${{secrets.WOWI_API_TOKEN}}
+          GITHUB_OAUTH:   ${{secrets.GITHUB_TOKEN}}
 
-    - name: Put everything into a folder called OpenThosePouches
-      run: cp -r OpenThosePouches.lua LICENSE README.md OpenThosePouches.toc OpenThosePouches/
-
-    - name: Zip it good
-      run: zip -9 -r OpenThosePouches.zip  OpenThosePouches/
-
-    - name: Parse WoW Addon Verions
-      id: get_versions
-      uses: icbat/parse-wow-addon-version@v1.1.0
-      with:
-        tocfile: OpenThosePouches.toc
-
-    - name: Create GH Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.get_versions.outputs.addon_version }}
-        release_name: Release ${{ steps.get_versions.outputs.addon_version }}
-        draft: false
-        prerelease: false
-
-    - name: Upload GH Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./OpenThosePouches.zip
-        asset_name: OpenThosePouches.zip
-        asset_content_type: application/zip
-
-    - name: Upload to WoW Interface
-      uses: icbat/wow-addon-upload-action@v1.0.3
-      with:
-        id: 26222
-        zipFilePath: OpenThosePouches.zip
-        compatible: ${{ steps.get_versions.outputs.supported_version_semantic }}
-        version: ${{ steps.get_versions.outputs.addon_version }}
-        apiKey: ${{ secrets.wowi_api_token }}
